# STDGames

./: .gitignore  Dockerfile.dev  Dockerfile.release  Makefile  package-lock.json  package.json  run_build.sh  run_dev.sh  test.js  tmp.toml
.github/workflows/: build.yml
docker/: Dockerfile  run_build.sh  run_debug.sh
docker/debug/: Dockerfile
docker/release/: Dockerfile
src/: index.html  main.js  splashscreen.html  styles.css
src-tauri/: .gitignore  Cargo.toml  button.css  target  tauri.conf.json
src-tauri/src/: check_authorized.rs  desktop_icons.rs  game_library.rs  game_librayr.bak  launcher.rs  lib.rs  main.rs  saru.rs  utils.rs
src/css/: styles.css
src/css/styles/: animations.css  button.css  fonts.css  game-library.css  settings.css  sidebar.css
src/js/: main.js
src/js/api/: games.js  system.js
src/js/ui/: display.js  preview.js  search.js  sorting.js
src/js/utils/: debounce.js  helpers.js
src/resources/: stdgames.desktop
src/styles/: button.css  fonts.css  game-library.css  game-list.css  sidebar.css
