[package]
name = "stdgames"
version = "0.1.0"
description = "A Tauri App"
authors = ["STD"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stdgames_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.138"
once_cell = "1.20.2"
nix = "0.29.0"
users = "0.11"
rayon = "1.10.0"
reqwest = {version = "0.12.15", features = ["blocking", "json"] }
tokio = "1.45.0"

[profile.dev]
incremental = true

[profile.release]
incremental = true
lto = "fat"
