[package]
name = "stdgames"
version = "0.1.1"
description = "A Game Launcher"
authors = ["Saru", "Timéo", "David"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stdgames_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
uzers = "0.12"
anyhow = "1"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
incremental = true

# [profile.dev]
# lto = "fat"
